--- a/src/main/resources/static/css/SignupInfoStyle.css
+++ b/src/main/resources/static/css/SignupInfoStyle.css
@@ -6,6 +6,7 @@
 }
 
 h1{
+  margin-left: 25%;
   margin-top: 8%;
   padding-bottom: 100px;
   font-size: 20pt;
@@ -17,92 +18,6 @@ p{
   font-weight: bold;
 }
 
-img{
-  display: block;
-  margin: auto;
-  margin-top: 3%;
-}
-
-label{
-  //margin: 0 40px 0 0;
-  font-size: 26px;
-  line-height: 70px;
-  display: none;
-}
-
-.link ul{
-  float: right;
-  margin-right: 10%;
-}
-
-.link ul li{
-  display: inline-block;
-  line-height: 40px;
-  margin: 0 10px;
-}
-
-.link ul li a{
-  color: #737272;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.menubar{
-  text-align: right;
-  height: 50px;
-  line-height: 50px;
-}
-
-.menu ul {
-  background: #003087;
-  height: auto;
-  width: 100%;
-  text-align: center;
-  padding: 0.4em 0;
-}
-
-.menu ul li{
-  display: inline-block;
-  padding: 0 2em;
-  vertical-align: middle;
-  border-left: 0.5px solid #c0c0c0;
-  line-height: 15px;
-}
-
-.menu ul li:first-child{
-  border-left: none;
-}
-
-.menu ul li a{
-  font-size: 20px;
-  color: white;
-  vertical-align: middle;
-}
-
-span {
-  color: #54D17A;
-}
-
-
-label {
-  margin: 0 40px 0 0;
-  font-size: 26px;
-  line-height: 70px;
-  display: none;
-}
-
-#toggle {
-  display: none;
-}
-
-.leftsideblank {
-  float: left;
-}
-
-.rightsideblank {
-  float: right;
-}
-
 table{
   height: 40%;
   font-size: 13pt;
@@ -112,14 +27,13 @@ table{
 th, td {
     border-bottom: 1px solid #d7dade;
     padding: 10px;
-  }
+}
 
 input[type=button]{
   background-color: #003087;
   color: white;
   padding: 10px;
   margin: -13%;
-  //display: inline-block;
   border: none;
   cursor: pointer;
 }
@@ -132,7 +46,6 @@ input[type=file]{
   font-size: 16px;
 }
 
-
 button {
   background-color: #003087;
   width: 50%;
@@ -143,10 +56,6 @@ button {
   cursor: pointer;
 }
 
-.buttonWrapper{
-  text-align: center;
-}
-
 button:hover, input[type=button]:hover {
   opacity: 0.7;
 }
@@ -155,59 +64,6 @@ button:hover, input[type=button]:hover {
   border: 0.5px solid #6d788a;
   border-top: 3px solid black;
   padding: 20px;
-  overflow: hidden;
-}
-
-select{
-  font-size: 13pt;
-  padding: 4px;
-}
-
-/*크기 줄어들었을 때*/
-@media screen and (min-width: 1200px) {
-  .leftsideblank, .rightsideblank {
-    width: 12.5%;
-    height:100vh;
-  }
-}
-
-@media screen and (max-width: 1200px){
-  label{
-    display: block;
-    cursor: pointer;
-  }
-
-  .menu{
-    text-align: center;
-    width: 100%;
-    display: none;
-  }
-
-  .menu ul{
-    background-color: rgba(0, 48, 135, 0.65);
-  }
-
-  .menu ul li{
-    display: block;
-    border-top: 1px solid #EAEAEB;
-    border-left: none;
-    padding-top: 1.3em;
-    padding-bottom: 1.3em;
-    vertical-align: middle;
-    text-align: center;
-  }
-
-  .menu ul li:first-child{
-    border-top: none;
-  }
-
-  .leftsideblank, .rightsideblank {
-    width: 12.5%;
-    height: 100vh;
-  }
-
-
-  #toggle:checked + .menu{
-    display: block;
-  }
+  width: 60%;
+  margin-left: 25%;
 }
