--- a/src/main/resources/templates/SignupInfo.html
+++ b/src/main/resources/templates/SignupInfo.html
@@ -9,6 +9,34 @@
 
 <!-- 해당페이지 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+  <script>
+    function check_pw() { //???? ???? ??
+      var pw = document.getElementById('pw').value;
+      var SC = ["!", "@", "$", "&", "*"];
+      var check_SC = 0;
+
+      for (var i = 0; i < SC.length; i++) {
+        if (pw.indexOf(SC[i]) != -1) {
+          check_SC = 1;
+        }
+      }
+
+      if (check_SC == 0) {
+        window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
+        document.getElementById('pw').value = '';
+      }
+
+      if (document.getElementById('pw').value != '' && document.getElementById('pwCheck').value != '') {
+        if (document.getElementById('pw').value == document.getElementById('pwCheck').value) {
+          document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
+          document.getElementById('check').style.color = 'blue';
+        } else {
+          document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
+          document.getElementById('check').style.color = 'red';
+        }
+      }
+    }
+  </script>
 </th:block>
 
 <div layout:fragment="content">
@@ -19,53 +47,52 @@
     </aside>
     <article>
       <h1>✔ 회원가입</h1>
-      <div class="registerForm">
-      <table border="0">
-        <tr>
-          <td>이름</td>
-          <td><input type="text" id="name"></td>
-        </tr>
-        <tr>
-          <td>학번(ID)</td>
-          <td><input type="text" id="ID"></td>
-          <td><input type="button" name="IDcheck" value="중복확인"></td>
-        </tr>
-        <tr>
-          <td>비밀번호</td>
-          <td><input type="password" name="password" value=""></td>
-        </tr>
-        <tr>
-          <td>비밀번호 확인</td>
-          <td><input type="password" name="passwordCheck" value=""></td>
-          <td><input type="button" name="PWDcheck" value="확인"></td>
-        </tr>
-        <tr>
-          <td>신분</td>
-          <td><input type="radio" name="status" value="student">학생</td>
-          <td><input type="radio" name="status" value="staff">교수자/조교</td>
-        </tr>
-        <tr>
-          <td rowspan="2">제1전공</td>
-          <td><select class="major1" name="major1">
-              <option value="itdept">IT공학전공</option>
-              <option value="notIT">타전공</option>
-            </select>
-        </tr>
-        <tr>
-          <td><input type="text" name="notIT-major" value=""></td>
-          <td>*제1전공 소속이 IT공학전공이 아닌 경우 타전공 선택 후 입력</td>
-        </tr>
-        <tr>
-          <td>제2전공</td>
-          <td><input type="text" name="major2"></td>
-        </tr>
-        <tr>
-          <td rowspan="2">숙명포털 인증</td>
-          <td><input type="file" name="authImg" value="authImg"></td>
-        </tr>
-      </table>
-      <button type="button" name="SignupEnd">작성 완료</button>
-    </div>
+      <form th:action="@{/process_register}" th:object="${user}"
+            enctype="multipart/form-data" method="post">
+        <div class="registerForm">
+          <table border="0">
+            <tr>
+              <td>이름</td>
+              <td><input type="text" th:field="*{name}" id="name" required></td>
+            </tr>
+            <tr>
+              <td>학번(ID)</td>
+              <td><input type="text" th:field="*{studentIdNum}" id="ID" required></td>
+              <td><input type="button" name="IDcheck" value="중복확인"></td>
+            </tr>
+            <tr>
+              <td>비밀번호</td>
+              <td><input type="password" th:field="*{password}" id="pw" value=""
+                         required minlength="6" maxlength="10" onchange="check_pw()"></td>
+            </tr>
+            <tr>
+              <td>비밀번호 확인</td>
+              <td><input type="password" id="pwCheck" value=""
+                         required minlength="6" maxlength="16" onchange="check_pw()">
+                <br> <span id="check"></span></td>
+            </tr>
+            <tr>
+              <td>신분</td>
+              <td><input type="radio" name="identity" value="student" th:field="*{identity}">학생</td>
+              <td><input type="radio" name="identity" value="staff" th:field="*{identity}">교수자/조교</td>
+            </tr>
+            <tr>
+              <td>제1전공</td>
+              <td><input type="text" th:field="*{major1}" required/></td>
+            </tr>
+            <tr>
+              <td>제2전공</td>
+              <td><input type="text" th:field="*{major2}"></td>
+            </tr>
+            <tr>
+              <td rowspan="2">숙명포털 인증</td>
+              <td><input type="file" name="authImg" value="authImg"></td>
+            </tr>
+          </table>
+          <button type="submit" name="SignupEnd">작성 완료</button>
+        </div>
+        <br><br><br>
+      </form>
     </article>
   </section>
 </div>
