PROPOSAL, FINALPT, FAIR ADDED

--- a/src/main/resources/templates/projectPost.html
+++ b/src/main/resources/templates/projectPost.html
@@ -72,6 +72,33 @@
                             </td>
                         </tr>
                         <tr>
+                            <td> 제안서 파일 </td>
+                            <td>
+                                <div class="custom-file" id="inputProposalFile">
+                                    <input name="proposalFile" type="file" class="custom-file-input" id="customProposalFile">
+                                    <label class="custom-file-label" for="customProposalFile">파일을 선택해 주세요.</label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> 최종발표 자료 </td>
+                            <td>
+                                <div class="custom-file" id="inputFinalPTFile">
+                                    <input name="finalPTFile" type="file" class="custom-file-input" id="customFinalPTFile">
+                                    <label class="custom-file-label" for="customFinalPTFile">파일을 선택해 주세요.</label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> 전시회 자료 </td>
+                            <td>
+                                <div class="custom-file" id="inputFairFile">
+                                    <input name="fairFile" type="file" class="custom-file-input" id="customFairFile">
+                                    <label class="custom-file-label" for="customFairFile">파일을 선택해 주세요.</label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
                             <td> 소스코드 파일 </td>
                             <td>
                                 <div class="custom-file" id="inputSourceFile">
@@ -92,7 +119,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                <input class="btn btn-primary" type="submit" role="button" value="글쓰기">
+                                <input class="btn btn-primary" type="submit" role="button" value="저장">
                             </td>
                         </tr>
                     </form>
