--- a/src/main/resources/templates/projectPost.html
+++ b/src/main/resources/templates/projectPost.html
@@ -60,17 +60,35 @@
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="rn">React Native</label></td>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="spring">Spring</label></td>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="vuejs">VueJS</label></td>
-                                        <td><label><input name="checkbox" class="language_select" type="checkbox" value="etc">기타</label></td>
+                                        <td>
+                                            <label><input name="checkbox" class="language_select" type="checkbox" value="etc"
+                                                          onclick="if (this.checked){ document.getElementById('changeMode').removeAttribute('disabled');}">기타</label>
+                                            <textarea name="etcText" id="changeMode" class="language_select" type="text" value="etc" disabled></textarea>
+                                        </td>
                                     </tr></table>
                             </td>
                         </tr>
                         </tr>
                         <tr>
-                            <td> 내용 </td>
+                            <td> 개발 목적 </td>
+                            <td>
+                                <textarea type="text" name="purpose" class="form-control" id="inputPurpose" cols="40" rows="10"></textarea>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td> 프로젝트 설명 </td>
                             <td>
                                 <textarea type="text" name="content" class="form-control" id="inputContent" cols="40" rows="10"></textarea>
                             </td>
                         </tr>
+                        <tr>
+                            <td> 기대효과 </td>
+                            <td>
+                                <textarea type="text" name="effect" class="form-control" id="inputEffect" cols="40" rows="10"></textarea>
+                            </td>
+                        </tr>
+
                         <tr>
                             <td> 제안서 파일 </td>
                             <td>
