--- a/src/main/resources/templates/projectList.html
+++ b/src/main/resources/templates/projectList.html
@@ -19,35 +19,38 @@
         </aside>
         <article>
             <h1>졸업작품 소개</h1>
+            <form action="/projectList" method="post">
             <table class="year">
                 <tr>
-                    <td><label><input id="total_year" type="radio" value="all_year"> 전체 </label></td>
-                    <td><label><input class="year_select" type="checkbox" value="2016"> 2016 </label></td>
-                    <td><label><input class="year_select" type="checkbox" value="2017"> 2017 </label></td>
-                    <td><label><input class="year_select" type="checkbox" value="2018"> 2018 </label></td>
-                    <td><label><input class="year_select" type="checkbox" value="2019"> 2019 </label></td>
-                    <td><label><input class="year_select" type="checkbox" value="2020"> 2020 </label></td>
+                    <td><label><input id="total_year" name="year_select" type="radio" value="all_year"> 전체 </label></td>
+                    <td><label><input class="year_select" name="year_select" type="checkbox" value="2016"> 2016 </label></td>
+                    <td><label><input class="year_select" name="year_select" type="checkbox" value="2017"> 2017 </label></td>
+                    <td><label><input class="year_select" name="year_select" type="checkbox" value="2018"> 2018 </label></td>
+                    <td><label><input class="year_select" name="year_select" type="checkbox" value="2019"> 2019 </label></td>
+                    <td><label><input class="year_select" name="year_select" type="checkbox" value="2020"> 2020 </label></td>
                 </tr>
             </table>
             <br/>
 
             <table class="language">
                 <tr>
-                    <td><label><input id="language_total_year" type="radio" value="all">전체</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="android">Android</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="cc">C/C++</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="django">Django</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="htmlcssjs">HTML5</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="java">Java</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="nodejs">NodeJS</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="python">Python</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="rn">React Native</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="spring">Spring</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="vuejs">VueJS</label></td>
-                    <td><label><input class="language_select" type="checkbox" value="etc">기타</label></td>
+                    <td><label><input id="language_total_year" name="language_select" type="radio" value="all_language">전체</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="android">Android</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="cpp">C/C++</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="django">Django</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="html">HTML5</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="java">Java</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="nodejs">NodeJS</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="python">Python</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="rn">React Native</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="spring">Spring</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="vuejs">VueJS</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="etc">기타</label></td>
                 </tr>
             </table>
 
+            <input id="searchButton" class="btn btn-primary" type="submit" role="button" value="검색" onclick="pressed()">
+            </form>
             <script type="text/javascript">
                 var $table = document.querySelector('.year');
                 $table.addEventListener("click", function (e) {
