MODIFY PROJECTEDIT-LOAD CHECKBOX, SELECT DATA | MAKE MORE FILES AND CONTENTS TO BE STORED AS PROJECTPOST | MODIFY PROJECTDETAIL FOR DISABLE DOWNLOAD LINK IF FILE DOES NOT EXIST | BUG FIX FOR FILESERVICE FOR CASES IF FILE NOT EXISTS

--- a/src/main/resources/templates/projectPost.html
+++ b/src/main/resources/templates/projectPost.html
@@ -63,7 +63,7 @@
                                         <td>
                                             <label><input name="checkbox" class="language_select" type="checkbox" value="etc"
                                                           onclick="if (this.checked){ document.getElementById('changeMode').removeAttribute('disabled');}">기타</label>
-                                            <textarea name="etcText" id="changeMode" class="language_select" type="text" value="etc" disabled></textarea>
+                                            <input name="etcText" id="changeMode" class="language_select" type="text" value="etc" disabled placeholder="기타 개발환경" />
                                         </td>
                                     </tr></table>
                             </td>
