--- a/src/main/resources/templates/projectDetail.html
+++ b/src/main/resources/templates/projectDetail.html
@@ -32,30 +32,30 @@
                     </p>
                     <hr/>
 
-                    <p class="card-text" th:text="${post.purpose}" style="font-size: 15pt"></p>
-                    <p class="card-text" th:text="${post.content}" style="font-size: 15pt"></p>
-                    <p class="card-text" th:text="${post.effect}" style="font-size: 15pt"></p>
+                    <p class="card-text" style="font-size: 15pt" th:text="'개발목적: '+${post.purpose}"></p>
+                    <p class="card-text" th:text="'프로젝트 설명: '+${post.content}" style="font-size: 15pt"></p>
+                    <p class="card-text" th:text="'기대효과: '+${post.effect}" style="font-size: 15pt"></p>
 
 
                     <div th:if="${post.id != null}" style="margin-top: 3%; font-size: 12pt">
                         <strong>제안서 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/proposal/' +${post.id}}" th:text="다운로드"></a>
+                        <a class="card-text" th:href="@{'/download/proposal/' +${post.id}}" th:text="${proposalFileName}"></a>
                     </div>
                     <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
                         <strong>최종발표 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/finalPT/' +${post.id}}" th:text="다운로드"></a>
+                        <a class="card-text" th:href="@{'/download/finalPT/' +${post.id}}" th:text="${finalPTFileName}"></a>
                     </div>
                     <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
                         <strong>전시회 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/fair/' +${post.id}}" th:text="다운로드"></a>
+                        <a class="card-text" th:href="@{'/download/fair/' +${post.id}}" th:text="${fairFileName}"></a>
                     </div>
                     <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
                         <strong>소스코드 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/source/' +${post.id}}" th:text="다운로드"></a>
+                        <a class="card-text" th:href="@{'/download/source/' +${post.id}}" th:text="${sourceFileName}"></a>
                     </div>
                     <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
                         <strong>논문 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/paper/' +${post.id}}" th:text="다운로드"></a>
+                        <a class="card-text" th:href="@{'/download/paper/' +${post.id}}" th:text="${paperFileName}"></a>
                     </div>
 
                 </div>
