--- a/src/main/resources/templates/projectEdit.html
+++ b/src/main/resources/templates/projectEdit.html
@@ -17,11 +17,11 @@
         </aside>
         <aside class="rightsideblank">
         </aside>
+
         <article>
             <h1>게시글 쓰기</h1>
             <table class="inputTable">
                 <form th:action="@{'/projectPost/edit/' + ${post.id}}" method="post" enctype="multipart/form-data">
-                    <input type="hidden" name="_method" value="put"/>
                     <input type="hidden" name="id" th:value="${post.id}"/>
                     <tr>
                         <td> 프로젝트 이름 </td>
@@ -30,7 +30,7 @@
                     <tr>
                         <td> 연도 </td>
                         <td>
-                            <select name="year" id="inputYear" th:value="${post.year}">
+                            <select name="year" id="inputYear">
                                 <option value="">연도</option>
                                 <option value="2016">2016</option>
                                 <option value="2017">2017</option>
@@ -39,7 +39,7 @@
                                 <option value="2020">2020</option>
                             </select>
 
-                            <select name="semester" id="inputSemester" th:value="${post.semester}">
+                            <select name="semester" id="inputSemester">
                                 <option value="">학기</option>
                                 <option value="1">1학기</option>
                                 <option value="2">2학기</option>
@@ -51,32 +51,79 @@
                         <td>
                             <table>
                                 <tr>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="android">Android</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="cpp">C/C++</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="django">Django</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="html">HTML5</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="java">Java</label></td></tr>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="android" id="android">Android</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="cpp" id="cpp">C/C++</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="django" id="django">Django</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="html" id="html">HTML5</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="java" id="java">Java</label></td></tr>
                                 <tr>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="nodejs">NodeJS</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="python">Python</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="rn">React Native</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="spring">Spring</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="vuejs">VueJS</label></td>
-                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="etc">기타</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="nodejs" id="nodejs">NodeJS</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="python" id="python">Python</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="rn" id="rn">React Native</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="spring" id="spring">Spring</label></td>
+                                    <td><label><input name="checkbox" class="language_select" type="checkbox" value="vuejs" id="vuejs">VueJS</label></td>
+                                    <td>
+                                        <label><input name="checkbox" class="language_select" type="checkbox" value="etc" id="etc"
+                                                      onclick="if (this.checked){ document.getElementById('changeMode').removeAttribute('disabled');}">기타</label>
+                                        <input name="etcText" id="changeMode" class="language_select" type="text" placeholder="기타 개발환경" disabled />
+                                    </td>
                                 </tr></table>
                         </td>
                     </tr>
+                    <tr>
+                        <td> 개발 목적 </td>
+                        <td>
+                            <textarea type="text" name="purpose" class="form-control" id="inputPurpose" cols="40" rows="10" th:text="${post.purpose}"> </textarea>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td> 프로젝트 설명 </td>
+                        <td>
+                            <textarea type="text" name="content" class="form-control" id="inputContent" cols="40" rows="10" th:text="${post.content}"> </textarea>
+                        </td>
                     </tr>
                     <tr>
-                        <td> 내용 </td>
+                        <td> 기대효과 </td>
                         <td>
-                            <textarea type="text" name="content" class="form-control" id="inputContent" cols="40" rows="10" th:value="${post.content}"></textarea>
+                            <textarea type="text" name="effect" class="form-control" id="inputEffect" cols="40" rows="10" th:text="${post.effect}"> </textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> 제안서 파일 </td>
+                        <td>
+                            <div class="custom-file" id="inputProposalFile">
+                                <p th:text="${proposalFileName}">name</p>
+                                <input name="proposalFile" type="file" class="custom-file-input" id="customProposalFile">
+                                <label class="custom-file-label" for="customProposalFile">파일을 선택해 주세요.</label>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> 최종발표 자료 </td>
+                        <td>
+                            <div class="custom-file" id="inputFinalPTFile">
+                                <p th:text="${finalPTFileName}">name</p>
+                                <input name="finalPTFile" type="file" class="custom-file-input" id="customFinalPTFile">
+                                <label class="custom-file-label" for="customFinalPTFile">파일을 선택해 주세요.</label>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> 전시회 자료 </td>
+                        <td>
+                            <div class="custom-file" id="inputFairFile">
+                                <p th:text="${fairFileName}">name</p>
+                                <input name="fairFile" type="file" class="custom-file-input" id="customFairFile">
+                                <label class="custom-file-label" for="customFairFile">파일을 선택해 주세요.</label>
+                            </div>
                         </td>
                     </tr>
                     <tr>
                         <td> 소스코드 파일 </td>
                         <td>
                             <div class="custom-file" id="inputSourceFile">
+                                <p th:text="${sourceFileName}">name</p>
                                 <input name="sourceFile" type="file" class="custom-file-input" id="customSourceFile">
                                 <label class="custom-file-label" for="customSourceFile">파일을 선택해 주세요.</label>
                             </div>
@@ -86,6 +133,7 @@
                         <td> 논문 파일 </td>
                         <td>
                             <div class="custom-file" id="inputPapaerFile">
+                                <p th:text="${paperFileName}">name</p>
                                 <input name="paperFile" type="file" class="custom-file-input" id="customPaperFile">
                                 <label class="custom-file-label" for="customPaperFile">파일을 선택해 주세요.</label>
                             </div>
@@ -99,23 +147,67 @@
                     </tr>
                 </form>
             </table>
+            <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
+            <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+            <script>
+                $(function() {
+                    $("#inputYear").val([[${post.year}]]).attr("selected");
+                });
+
+                $(function() {
+                    $('#inputSemester').val([[${post.semester}]]).attr("selected");
+                });
+
+                $(function() {
+                    var langListArray = "[[${postLang}]]".split(' ');
+                    var count = 0;
+                    for(var i=0; i <langListArray.length; i++) {
+                        if(langListArray[i] == "Android") {
+                            $("input:checkbox[id='android']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "C/C++") {
+                            $("input:checkbox[id='cpp']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "Django") {
+                            $("input:checkbox[id='django']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "HTML/CSS/JS") {
+                            $("input:checkbox[id='html']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "Java") {
+                            $("input:checkbox[id='java']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "NodeJs") {
+                            $("input:checkbox[id='nodejs']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "Python") {
+                            $("input:checkbox[id='python']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "React-Native") {
+                            $("input:checkbox[id='rn']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "Spring") {
+                            $("input:checkbox[id='spring']").prop("checked", true);
+                            count++;
+                        } else if(langListArray[i] == "VueJS") {
+                            $("input:checkbox[id='vuejs']").prop("checked", true);
+                            count++;
+                        }
+                    }
+                    if(count == langListArray.length-1) {
+                        $("input:checkbox[id='etc']").prop("checked", true);
+                        document.getElementById('changeMode').value = langListArray[langListArray.length-1];
+                    }
+                });
+
+                $(".custom-file-input").on("change", function() {
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+                });
+            </script>
         </article>
     </section>
 </div>
-<script>
-    $(document).ready(function() {
-        $("form").submit(function() {
-            var languages = [];
-            $.each($("input[type='checkbox']:checked"), function() {
-                languages.push($(this).attr('id'));
-            });
-        });
-    });
 
-    $(".custom-file-input").on("change", function() {
-        var fileName = $(this).val().split("\\").pop();
-        $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-    });
-</script>
 </body>
 </html>
