Login with Role, Logout, Show&Hide Buttons using Role

--- a/src/main/resources/templates/SignupInfo.html
+++ b/src/main/resources/templates/SignupInfo.html
@@ -73,8 +73,8 @@
             </tr>
             <tr>
               <td>신분</td>
-              <td><input type="radio" name="identity" value="student" th:field="*{identity}">학생</td>
-              <td><input type="radio" name="identity" value="staff" th:field="*{identity}">교수자/조교</td>
+              <td><input type="radio" name="identity" value="ROLE_STUDENT" th:field="*{role}">학생</td>
+              <td><input type="radio" name="identity" value="ROLE_STAFF" th:field="*{role}">교수자/조교</td>
             </tr>
             <tr>
               <td>제1전공</td>
