--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,14 @@
                 <a href="/"> Home </a>
             </li>
             <li>
-                <a href="/user/login"> Login </a>
+                <a th:if="${#authorization.expression('!isAuthenticated()')}"
+                        href="/user/login"> Login </a>
+
+                <form th:if="${#authorization.expression('isAuthenticated()')}"
+                        method="post" th:action="@{/logout}" th:fragment="logout">
+                    <button type="submit"
+                            style="border: none; background-color: white;"> Logout </button>
+                </form>
             </li>
             <li>
                 <a href="http://it.sookmyung.ac.kr/it/index.do"><span> 학과사이트 </span></a>
