--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,7 +45,11 @@
                     <a href="/projectList"> 졸업작품 소개 </a>
                 </li>
                 <li>
-                    <a href="#"> 마이페이지 </a>
+                    <a th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                    href="/staff/staffPage"> 관리페이지 </a>
+
+                    <a th:if ="${#authorization.expression('hasRole(''STUDENT'')')}"
+                    href="/user/studentPage"> 마이페이지 </a>
                 </li>
             </ul>
         </div>
