--- a/src/main/resources/templates/FindPW.html
+++ b/src/main/resources/templates/FindPW.html
@@ -20,24 +20,22 @@
         </aside>
         <article>
             <h1>✔ 비밀번호 찾기</h1>
+            <form role="form" action="/login/findPW" id="findPW" method="POST">
             <div class="email">
                 <table border="0">
                     <tr>
                         <td>학번(ID):</td>
-                        <td><input type="text" id="ID" class=required></td>
-                    </tr>
-                    <tr class="line1">
-                        <td>이메일:</td>
-                        <td><input type="text" id="email">@sookmyung.ac.kr</td>
+                        <td><input type="text" name="id" id="ID" class=required></td>
                     </tr>
                 </table>
             </div>
 
             <div class="buttonWrapper">
-                <button type="button" name="findpw" onclick="window.location.href='/user/login'; alert('이메일이 전송되었습니다');">
-                    비밀번호찾기
+                <button type="submit" name="findpw" onclick="window.location.href='/user/login'; alert('저장된 이메일로 임시 비밀번호가 발송되었습니다');">
+                    비밀번호 찾기
                 </button>
             </div>
+            </form>
         </article>
     </section>
 </div>
