userdetail, logoutstyle, fixURL, add footer

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,8 +2,15 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
-    <div style="border: 1px solid gold">
-        Footer영역입니다.
+    <hr style="border: 1px solid #6d788a ">
+    <div class="address"
+         style="text-align: center;">
+        (04310) 서울특별시 용산구 청파로47길 100 (청파동2가) 숙명여자대학교 IT공학전공<span class="bar">|</span> TEL. 02)710-9379 <span class="bar">|</span> FAX. 02)-710-9704
+    </div>
+    <div class="copyright"
+        style="text-align: center;">
+        Copyright ⓒ Sookmyung Women’s University. All Rights Reserved.
+        <br><br>
     </div>
 </footer>
 </html>
