--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
             <br><br>
             <div class="register">
                 <p>회원가입을 하시려면</p>
-                <a href="/signupEmail">회원가입</a>
+                <a href="/signup/email">회원가입</a>
             </div>
             <br>
             <div class="forgotPW">
