--- a/src/main/resources/templates/studentPage.html
+++ b/src/main/resources/templates/studentPage.html
@@ -20,18 +20,16 @@
         </aside>
         <article>
             <h1>✔ 마이페이지</h1>
-            <h3><span id="user_name" sec:authentication="name"></span>님의 회원정보</h3>
-            <p>학번: </p>
-            <p th:text="${userDetails}"></p>
-            <!-- <span sec:authentication="userDetails"></span> -->
-            <p>제 1전공: </p>
-            <p>제 2 전공: </p>
+            <h3><span id="user_name" sec:authentication="name" style="color: #003087"></span>님의 회원정보</h3>
+            \
+            <p>학번: <span th:text="${studentIdNum}" style="color: black;"></span></p>
+            <p>제 1전공: <span th:text="${usermajor1}" style="color: black;"></span> </p>
+            <p>제 2 전공: <span th:text="${usermajor2}" style="color: black;"></span></p>
 
-
-
+            <br>
             <h3>회원정보 수정</h3>
 
-
+            <br><br>
 
         </article>
     </section>
