signup email form action fixed

--- a/src/main/resources/templates/SignupEmail.html
+++ b/src/main/resources/templates/SignupEmail.html
@@ -20,7 +20,7 @@
         </aside>
         <article>
             <h1>✔ 회원가입</h1>
-            <form role="form" action="/signupEmail" id="EmailAuth" method="POST">
+            <form role="form" action="/signup/email" id="EmailAuth" method="POST">
                 <div class="emailAuth">
                     <div class="email">
                         <p>이메일 인증</p>
@@ -36,7 +36,7 @@
             </form>
             <br><br><br>
 
-            <form role="form" action="/signupEmail" name="CodeAuth" id="CodeAuth" method="POST">
+            <form role="form" action="/signup/email" name="CodeAuth" id="CodeAuth" method="POST">
                 <div class="verinum">
                     <p>인증번호 입력</p>
                     <table border="0">
