--- a/src/main/resources/templates/projectList.html
+++ b/src/main/resources/templates/projectList.html
@@ -111,6 +111,7 @@
                     <th scope="col" style="text-align: center">연도</th>
                     <th scope="col" style="text-align: center">학기</th>
                     <th scope="col" style="text-align: center">작성일</th>
+                    <th scope="col" style="text-align: center">조회수</th>
                 </tr>
                 <tr class="text-center" th:each="post : ${postList}">
                     <td>
@@ -129,6 +130,9 @@
                     </td>
                     <td>
                         <p th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></p>
+                    </td>
+                    <td>
+                        <p th:text="${post.hit}"></p>
                     </td>
                 </tr>
             </table>
