--- a/src/main/resources/templates/projectDetail.html
+++ b/src/main/resources/templates/projectDetail.html
@@ -66,11 +66,13 @@
                 <div class="col-auto" style="float: right; margin-left: 1%">
                     <form id="delete-form" th:action="@{'/projectPost/' + ${post.id}}" method="post">
                         <input type="hidden" name="_method" value="delete"/>
-                        <button id="delete-btn" type="submit" class="btn btn-danger">삭제</button>
+                        <button th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                                id="delete-btn" type="submit" class="btn btn-danger">삭제</button>
                     </form>
                 </div>
                 <div class="col-auto" style="float: right">
-                    <a class="btn btn-info" th:href="@{'/projectPost/edit/' + ${post.id}}" role="button">수정</a>
+                    <a th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                            class="btn btn-info" th:href="@{'/projectPost/edit/' + ${post.id}}" role="button">수정</a>
                 </div>
             </div>
         </section>
