--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,7 +31,7 @@
         <label class="menulabel" for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle"/>
         <div class ="menu">
-            <ul>
+            <ul class = "flexnav">
                 <li>
                     <a href="/projectProcess"> 졸업작품 진행 개요 </a>
                 </li>
