--- a/src/main/resources/templates/SignupEmail.html
+++ b/src/main/resources/templates/SignupEmail.html
@@ -20,7 +20,7 @@
         </aside>
         <article>
             <h1>✔ 회원가입</h1>
-            <form role="form" action="/signup/email" id="EmailAuth" method="POST">
+            <form role="form" action="/signup/email/getEmail" id="EmailAuth" method="POST">
                 <div class="emailAuth">
                     <div class="email">
                         <p>이메일 인증</p>
@@ -51,20 +51,13 @@
                     </table>
                 </div>
             </form>
-
-            <div class="buttonWrapper">
-                <input type="hidden" name="emailInput" th:value="${inputEmailID}">
-                <button type="button" id="buttonToNext" name="authSuccess" onclick="window.location.href='/signup/info';">다음</button>
-            </div>
             <script>
-                var nextButton = document.getElementById("buttonToNext");
                 if([[${status}]]) {
                     document.getElementById("status").style.color= 'blue';
-                    window.alert("인증 완료! 다음을 눌러 회원가입을 완료하세요.");
-                    nextButton.style.visibility = "visible";
+                    window.alert("인증 완료! 회원가입을 완료하세요.");
+                    window.location.href="/signup/info";
                 } else {
                     document.getElementById("status").style.color= 'red';
-                    nextButton.style.visibility = "hidden";
                 }
             </script>
             <br><br><br>
