ADD USERAPPROVAL PAGE FOR STAFF

--- a/src/main/resources/templates/SignupInfo.html
+++ b/src/main/resources/templates/SignupInfo.html
@@ -89,7 +89,7 @@
                         </tr>
                         <tr>
                             <td>숙명포털 인증</td>
-                            <td><input type="file" name="authImg" value="authImg"></td>
+                            <td><input type="file" name="authImg" value="authImg" required></td>
                         </tr>
                             <tr><td></td><td><button type="submit" name="SignupEnd" onclick="window.alert('회원가입이 완료되었습니다!')">작성 완료</button></td></tr>
 
