--- a/src/main/resources/templates/staffPage.html
+++ b/src/main/resources/templates/staffPage.html
@@ -20,6 +20,7 @@
         <article>
             <h1>관리자페이지</h1>
 
+            <input type="button" onclick="window.h">
 
         </article>
     </section>
