--- a/src/main/resources/templates/projectList.html
+++ b/src/main/resources/templates/projectList.html
@@ -137,44 +137,14 @@
                 </tr>
             </table>
 
-            <nav style="text-align: center;">
-                <ul class="pagination"
-                    th:with="start=${T(Math).floor(listPage.number/10)*10 + 1},
-                             last=(${start + 9 < listPage.totalPages ? start + 9 : listPage.totalPages})">
-                    <li>
-                        <!--첫 페이지로 가기 -->
-                        <a th:href="@{/projectList(page=1)}" aria-label="First">
-                            <span aria-hidden="true">First</span>
-                        </a>
-                    </li>
+            <!--
+            <div>
+                <span th:each="pageNum : ${pageList}" th:inline="text">
+                    <a th:href="@{'/projectList/page=' + ${pageNum}}">[[${pageNum}]]</a>
+                </span>
+            </div>
+            -->
 
-                    <li th:class="${listPage.first} ? 'disabled'">
-                        <!--이전 페이지로 가기, 맨 처음이면 이전버튼 X -->
-                        <a th:href="${listPage.first} ? '#' :@{/projectList(page=${listPage.number})}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                        </a>
-                    </li>
-
-                    <li th:each="page: ${#numbers.sequence(start, last)}" th:class="${page == listPage.number + 1} ? 'active'">
-                        <!-- 현재 페이지 그룹의 페이지 나열 -->
-                        <a th:text="${page}" th:href="@{/projectList(page=${page})}"></a>
-                    </li>
-
-                    <li th:class="${listPage.last} ? 'disabled'">
-                        <!-- 다음페이지로 가기 버튼, 맨 마지막이면 버튼X -->
-                        <a th:href="${listPage.last} ? '#' : @{/projectList(page=${listPage.number + 2})}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a th:href="@{/projectList(page=${listPage.totalPages})}" aria-label="Last">
-                            <!-- 마지막 페이지로 가기 버튼 -->
-                            <span aria-hidden="true">Last</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
 
 
 
