--- a/src/main/resources/templates/changePW.html
+++ b/src/main/resources/templates/changePW.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form role="form" action="/changePW" id="findPW" method="POST">
+<form role="form" action="/changePW" id="changePW" method="POST">
     <h3>비밀번호 수정</h3>
     <p>현재 비밀번호 입력</p>
     <input type="password" id="oldpw" value="" name="oldpw"
