--- a/src/main/resources/templates/studentPage.html
+++ b/src/main/resources/templates/studentPage.html
@@ -27,6 +27,7 @@
             <p>제 2 전공: <span th:text="${usermajor2}" style="color: black;"></span></p>
 
             <a href="#" onclick="window.open('/changePW', 'changePW', 'width=500 height= 400'); return false">비밀번호 변경</a>
+            <a href="#" onclick="window.open('/changeEmail', 'changeEmail', 'width=500 height= 400'); return false">이메일 변경</a>
         </article>
     </section>
 
