--- a/src/main/resources/templates/adminCreateUser.html
+++ b/src/main/resources/templates/adminCreateUser.html
@@ -1,40 +1,42 @@
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
-
-<!-- 해당페이지 고유 CSS 추가 -->
-<th:block layout:fragment="css">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/adminUserApprovalStyle.css}">
-</th:block>
-
-<!-- 해당페이지 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
-</th:block>
-
-<div layout:fragment="content">
-    <section>
-        <aside class="leftsideblank">
-        </aside>
-        <aside class="rightsideblank">
-        </aside>
-        <article>
-            <h1>회원 생성</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <h1>회원 생성</h1>
+        <table>
+            <tr>
+                <form role="form" action="/admin/createUser/checkId" name="createUserCheckId" id="checkId" method="POST">
+                    <td>학번</td>
+                    <td><input type="text" id="studentIdNum" name="studentIdNum" required></td>
+                    <td>학번 중복 확인 여부: [[${boolStatus}]]</td>
+                    <td><button type="submit" name="checkStudentId">학번 중복 체크</button></td>
+                </form>
+            </tr>
             <form role="form" action="/admin/createUser" name="createUser" id="createUser" method="POST">
-                <table>
-                    <tr>
-                        <td>학번</td>
-                        <td><input type="text" id="studentIdNum" name="studentIdNum" required></td>
-                    </tr>
-                    <tr>
-                        <td>이름</td>
-                        <td><input type="text" id="studentNum" name="studentNum" required></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><button type="submit" name="createUserEnd">회원 등록</button></td>
-                    </tr>
-                </table>
+            <tr>
+                <td>이름</td>
+                <td><input type="text" id="studentNum" name="studentNum" required></td>
+            </tr>
+            <tr>
+                <td colspan="2"><button type="submit" name="createUserEnd">회원 등록</button></td>
+            </tr>
             </form>
-        </article>
-    </section>
-</div>
+        </table>
+    <script>
+        if ("[[${id_status}]]" === "NULL_ID") {
+            window.alert("학번을 입력하세요.");
+        } else if("[[${id_status}]]" === "SAME_ID") {
+            window.alert("가입 이력이 있는 회원입니다.");
+            window.close();
+        } else if("[[${id_status}]]" === "INVALID_ID") {
+            window.alert("학번이 유효하지 않습니다.");
+        } else if("[[${id_status}]]" === "OK") {
+            window.alert("회원 생성 완료");
+            window.close();
+        }
+    </script>
+</body>
 </html>
