--- a/src/main/resources/templates/staffPage.html
+++ b/src/main/resources/templates/staffPage.html
@@ -20,7 +20,7 @@
         <article>
             <h1>관리자페이지</h1>
 
-            <input type="button" onclick="window.h">
+            <a href="#" onclick="window.open('/admin/createUser', 'adminCreateUser', 'width=500 height= 400'); return false">회원 생성</a>
 
         </article>
     </section>
